Fix bug where words didn't wrap in text-area

--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 main {
@@ -58,6 +58,7 @@ main {
   font-weight: 800;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
+  color: rgb(51, 51, 51);
 }
 
 #title::placeholder {
@@ -95,8 +96,14 @@ main {
 }
 
 #story {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 1.1rem;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.2rem;
+  resize: none;
+  letter-spacing: 0.7px;
+  color: rgb(51, 51, 51);
+  line-height: 27px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .submit-container {
